AA-2004-11-23-0: Bugfix:    qmon segv when deleting sharetree Root node more than once
                            - disallow editing of Root node
                            - disallow changing default node label
                 Issue:     1360
                 Bugtraq:   6199261
                 Changed:   qmon
                 Review:    RH
                 
CR-2004-11-23-2: Bugfix:    fixed bug in sge_ca script (GE CSP feature):
                            Generating certificate for users failed
                 Changed:   sge_ca script
                 Review:    AA

JG-2004-11-23-0: Testsuite: Verified tests system_tests/geee/sharetree/check.exp
                            and system_tests/utilbin/loadcheck/check.exp.

CR-2004-11-23-1: Testsuite: test for issue 1096 does not work with csp system

CR-2004-11-23-0: Testsuite: wait 5 seconds after restarting qmaster. It
                            may be a problem for following commands when
                            qmaster is not immediately reachable.

JG-2004-11-22-2: Testsuite: fixed check system_tests/shepherd/submit_del
                 Review:    CR

JG-2004-11-22-1: Testsuite: fixed creation of local configurations (set_config)
                            fixed check system_tests/config/submit_hosts
                 Review:    CR

CR-2004-11-22-0: Testsuite: fixed remote login testsuite problem
                 Review:    JG

JG-2004-11-22-0: Bugfix:    fixed a memory leak in mirror interface.
                 Review:    SG
                 Testsuite: Fixed test system_tests/config/path_alias.
                 Review:    CR

SG-2004-11-22-0: Bugfix:    fixed the scheduler messages for qstat -j.
                 Changed:   scheduler
                 Review:    EB

CR-2004-11-19-1: Testsuite  - new test: commlib deadlock test
                            - fixed bug in issue test 1270

MD-2004-11-19-0: Bugfix:    Bugfix fix. backup/restore problem. compress/gzip