@@ -1,0 +1,98 @@
+Source Code Review Form 
+=======================
+(version 1.1)
+
+Date: 2004-11-23
+
+1 Identification
+
+1.1 Issue         :     
+1.2 Bugtraq       :         
+1.3 Summary       : 6.0/60u1 to 6.0u2 update
+1.4 Changelog ID  : MD-2004-11-23-0
+1.5 Developer(s)  : MD
+1.6 Reviewer(s)   : CR        
+
+
+2 Conformance to specification
+
+2 [x ] yes
+2 [ ] no - comment:
+
+
+3 Documentation
+
+3.1 user/admin guide
+3.1 [x ] yes
+3.1 [ ] no - comment:
+
+3.2 man pages (user view)
+3.2 [x ] yes
+3.2 [ ] no - comment:
+
+3.3 -help output
+3.3 [x ] yes
+3.3 [ ] no - comment:
+
+3.4 documented interfaces (at least GDI, EVI, libs)
+3.4 [x ] yes
+3.4 [ ] no - comment:
+
+3.5 messages, output formats
+3.5 [x ] yes
+3.5 [ ] no - comment:
+
+
+4 Source review
+
+4.1 Style guide conformance
+4.1 [x ] yes
+4.1 [ ] no - comment:
+
+4.2 Memory leaks
+4.2 [x ] yes
+4.2 [ ] no - comment:
+
+4.3 Thread safe
+4.3 [x ] yes
+4.3 [ ] no
+
+
+5 Tests
+
+5.1 flawfinder diff
+No new flaws.
+5.1 [x ] yes
+5.1 [ ] no: 
+
+5.2 Used memory leak debugger
+5.2 [x ] yes
+5.2 [ ] no - comment:
+
+5.3 Manual tests
+Description:
+Successfull execution
+5.3 [x ] yes
+5.3 [ ] no - comment:
+
+5.4 Testsuite covers issue
+5.4 [ ] yes
+5.4 [x ] no - comment: no test
+
+5.5 If 5.4 = no: Testsuite issue created
+5.5 [ ] yes
+5.5 [x ] no - comment: no time
+
+5.6 Testsuite run successfull
+5.6 [x ] yes
+5.6 [ ] no - comment:
+
+
+6 Comments
+
+
+7 Accepted
+7 [x ] yes
+7 [ ] no - comment:
+
+
